--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
-        "animate.css": "^4.1.1"
+        "animate.css": "^4.1.1",
+        "flowbite": "^3.1.2"
     }
 }
